# rwanda-climate-service

./: .gitignore  Makefile  README.md  chap-GIS.md  climate-service.yaml  pyproject.toml  workflow.md
plugins/datasets/: chelsa.py  chelsa_temperature.yaml  elevation.py  elevation.yaml  mosquito_suitability.yaml  rice_fields.py  rice_fields.yaml  worldcover.py  worldcover.yaml
plugins/processes/: breeding_site_mask.py  exposure.py  hotspots.py  lapse_rate_downscale.py  multiply_cubes.py  resample_to_target.py  suitability.py
plugins/workflows/: mosquito_district_aggregation.json  mosquito_hotspot_raster.json  mosquito_suitability.json
